--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "fs": "0.0.1-security",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.25.0"
